<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/profile_activity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/profile_title"/>
    
    <item
        android:id="@+id/friends_activity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/friends_title"/>
    
    <item
        android:id="@+id/settings_activity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings_title"/>
    
    <item
        android:id="@+id/action_add_workout"
        android:text="@string/add_button"
        android:showAsAction="always"
        android:title="@string/add_button"/>
    

</menu>