<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    tools:context=".ProfileActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="122dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@color/get_swole_blue">

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/default_profile_photo"
                    android:onClick="onChangePhotoClicked"
                    android:src="@drawable/default_profile" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.29"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/profile_first_name"
                        android:inputType="textCapWords"
                        android:singleLine="true" >
                    </EditText>

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/profile_last_name"
                        android:inputType="textCapWords"
                        android:singleLine="true" >
                    </EditText>
                </LinearLayout>

                <EditText
                    android:id="@+id/hometown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hometown"
                    android:inputType="textCapWords"
                    android:singleLine="true" >
                </EditText>

                <EditText
                    android:id="@+id/sport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_sport"
                    android:inputType="textCapWords"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bio"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_bio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/get_swole_blue" />

        <EditText
            android:id="@+id/bioInputText"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profile_bio_input"
            android:inputType="textMultiLine" >
        </EditText>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioGenderM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_gender_male" />

                <RadioButton
                    android:id="@+id/radioGenderF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/profile_gender_female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_height"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/feetinput"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ft"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inchinput"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_in"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_weight"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/weightinput"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >

            </EditText>

            <TextView
                android:id="@+id/lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_lb"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_contact"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/get_swole_blue" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profile_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profile_phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/sharedWorkouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_shared_workouts"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/get_swole_blue" />

        <ListView
            android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false"
            android:isScrollContainer="false" />

        <TextView
            android:id="@id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/btnProfileSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSaveClicked"
                android:text="@string/ui_button_save_title" >
            </Button>

            <Button
                android:id="@+id/btnProfileCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/ui_button_cancel_title" >
            </Button>
        </LinearLayout>
    </LinearLayout>
	
</ScrollView>
