<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:contentDescription="@string/default_profile_photo"
                android:src="@drawable/default_profile" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="0.29"
                android:gravity="center"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_first_name"
                    android:inputType="textCapWords"
                    android:singleLine="true" >
                </EditText>

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_last_name"
                    android:inputType="textCapWords"
                    android:singleLine="true" >
                </EditText>

                <EditText
                    android:id="@+id/hometown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hometown"
                    android:inputType="textCapWords"
                    android:singleLine="true" >
                </EditText>
                
            </LinearLayout>
            
        </LinearLayout>

        <TextView
            android:id="@+id/athleticInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_athletic_information" />

        <EditText
            android:id="@+id/sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_sport"
            android:inputType="textCapWords"
            android:singleLine="true" >
        </EditText>
        
        <TextView
            android:id="@+id/sharedWorkouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_holo_dark"
            android:text="@string/profile_friend_workouts"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
        
        <ListView
		    android:id="@id/android:list"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:drawSelectorOnTop="false"
		    android:isScrollContainer="false" />

     	<TextView android:id="@id/android:empty"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_gravity="bottom"/>

        <!--<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/profile_height"
                android:inputType="numberSigned"
                android:singleLine="true" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/profile_weight"
                android:inputType="numberSigned"
                android:singleLine="true" />
            
        </LinearLayout> -->


    </LinearLayout>
	
</ScrollView>
